--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" href="https://pre00.deviantart.net/06a5/th/pre/i/2016/268/d/7/pokemon_go_icon_by_urnauzao-daiwf2s.png" type="image/gif"
+        sizes="18x18">
     <link rel="stylesheet" href="assests/css/main.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
